# profi-ru-parser-bot

./: .env.example  .gitignore  Dockerfile  README.md  alerting.py  bot_commands.py  cleanup.py  client.py  config.py  docker-compose.yml  enricher.py  filters.py  logger_setup.py  main.py  metrics.py  pyproject.toml  requirements-dev.txt  requirements.txt  run_all.py  specialties.py  specialties.yaml.example  storage.py
.github/workflows/: ci.yml
.planning/: PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md
.planning/phases/01-stabilization/: PLAN.md
.planning/phases/02-config-deployment/: PLAN.md
.planning/phases/03-robustness/: PLAN.md
.planning/phases/04-feature-enhancements/: PLAN.md
.planning/phases/05-testing-ci/: PLAN.md
systemd/: profi-parser-bot.service
tests/: test_bot_commands.py  test_cleanup.py  test_enricher.py  test_filters.py  test_metrics.py  test_run_all.py  test_specialties.py  test_storage.py  test_tg_formatter.py
