[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "profi-parser-bot"
version = "0.1.0"
description = "Telegram bot for monitoring Profi.ru AI/ML orders"
requires-python = ">=3.10"
license = "MIT"
dependencies = [
    "playwright",
    "aiogram",
    "aiohttp",
    "python-dotenv",
    "beautifulsoup4",
    "lxml",
]

[project.scripts]
profi-bot = "run_all:main"

[tool.setuptools]
py-modules = ["run_all", "config", "tg_formatter", "logger_setup", "main"]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "mypy>=1.10",
]

[tool.ruff]
line-length = 120
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]

# ---------------------------------------------------------------------------
# pytest
# ---------------------------------------------------------------------------
[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
asyncio_mode = "auto"
addopts = [
    "-ra",
    "--strict-markers",
    "--strict-config",
]
markers = [
    "integration: integration tests that exercise multiple components with mocked externals",
]
filterwarnings = [
    "error",
    "ignore::DeprecationWarning:aiogram.*",
    "ignore::DeprecationWarning:aiohttp.*",
]

# ---------------------------------------------------------------------------
# mypy
# ---------------------------------------------------------------------------
[tool.mypy]
python_version = "3.10"
strict = true
warn_return_any = true
warn_redundant_casts = true
warn_unreachable = true
warn_unused_ignores = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_any_generics = true
no_implicit_optional = true
show_error_codes = true
pretty = true
files = ["run_all.py", "config.py", "tg_formatter.py", "logger_setup.py", "main.py"]

[[tool.mypy.overrides]]
module = ["aiogram.*", "playwright.*", "bs4.*", "lxml.*"]
ignore_missing_imports = true